<!-- nav_header_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="60dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="#C8212529"
    android:paddingBottom="16dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="126dp"
        android:layout_height="124dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="52dp"
        android:textSize="24sp"
        android:textColor="#FFD600"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/app_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_gravity="start"
                android:text="@string/empName"
                android:textColor="#E1F5FE"
                android:textSize="24sp"
                android:padding="5dp"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userName"
                android:gravity="start"
                android:layout_gravity="start"
                android:textColor="#fff"
                android:textSize="24sp"
                android:padding="5dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/emp_id"
                android:textColor="#E1F5FE"
                android:padding="5dp"
                android:layout_gravity="start"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/empId"
                android:gravity="start"
                android:textColor="#fff"
                android:padding="5dp"
                android:layout_gravity="start"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/block"
                android:textColor="#E1F5FE"
                android:padding="5dp"
                android:layout_gravity="start"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/empBlock"
                android:gravity="start"
                android:textColor="#fff"
                android:padding="5dp"
                android:layout_gravity="start"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#E1F5FE"
                android:padding="5dp"
                android:gravity="start"
                android:layout_gravity="start"
                android:text="@string/company"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/empCompany"
                android:textColor="#fff"
                android:padding="5dp"
                android:gravity="start"
                android:layout_gravity="start"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/status"
                android:textColor="#E1F5FE"
                android:layout_gravity="start"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/empStatus"
                android:gravity="start"
                android:padding="5dp"
                android:textColor="#64DD17"
                android:layout_gravity="start"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
